--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header {
 .menu h1 {
   text-transform: uppercase;
   cursor: pointer;
-  color: #fff;
+  : #fff;
   font-weight: 400;
   font-size: 2.5rem;
   line-height: 2.5rem;
@@ -81,7 +81,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #000000;
   z-index: 20;
   display: flex;
   justify-content: flex-end;
@@ -128,7 +128,7 @@ header {
 .text-container a {
   font-size: 1.2rem;
   text-decoration: none;
-  color: #fff;
+  : #fff;
   opacity: 0.8;
 }
 
@@ -169,7 +169,7 @@ header {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: #000;
+    background-: #000;
     display: flex;
     justify-content: center;
     align-items: center;
