--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header {
 }
 .menu h1 a {
   text-decoration: none;
-  color: #fff;
+  : #fff;
 }
 
 .menu h1:hover {
@@ -81,7 +81,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 20;
   display: flex;
   justify-content: flex-end;
