--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ header {
   width: 40px;
 }
 
+.text-container .profile img {
+  width: 500px;
+}
+
 .text-container h2 {
   font-size: 2rem;
   margin-bottom: 10px;
@@ -448,4 +452,5 @@ header {
 	}
 
 }
+
 
